Update config variables for circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,8 @@ machine:
     POLL_INTERVAL: 1
     AWS_ACCESS_KEY_ID: test_placeholder
     AWS_SECRET_ACCESS_KEY: test_placeholder
-    Q_TOWATCH: test_placeholder
     AWS_Q_REGION: test_placeholder
+    Q_BATCH_SIZE: 10
     AWS_S3_BUCKET_NAME: test_placeholder
+    PUB_SUB_PREFIX: 'test'
+    PUB_SUB_TOPIC: 'test' 
